--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
    runs-on: ${{ matrix.os }}
    strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest]
    if: ${{ endsWith(github.event.head_commit.message, '[release]') }}
    steps:
     - name: Checkout de repositorio
@@ -38,10 +38,11 @@ jobs:
   pruebas:
     needs: release
     name: Pruebas
+    permissions: write-all
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest]
     steps:     
     - name: Checkout de repositorio
       uses: actions/checkout@v3
@@ -72,6 +73,19 @@ jobs:
         source-branch: ${{inputs.release_version}}
         target-branch: main
         commit-message: "Se integra rama ${{inputs.release_version}} en main. Rama main actualizada"
+        
+        
+    - name: Checkout de repositorio
+      uses: actions/checkout@v3
+      with:
+        ref: ${{inputs.release_version}}
+    - name: Creación de tag de versionamiento
+      run: |
+          git tag -a ${{inputs.release_tags}} -m 'Se realiza nuevo release ${{inputs.release_tags}}'
+    - name: Asignación de tag a la rama main
+      run: git push origin main
+        
+
     - name: Mezcla release -> develop
       uses: tukasz/direct-merge-action@master
       with:
