--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
    strategy:
       matrix:
         os: [ubuntu-latest]
-   if: ${{ endsWith(github.event.head_commit.message, '[release]') }}
+   if: ${{ contains(github.event.head_commit.message, '[release]') }}
    steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v3
