--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -139,6 +139,6 @@ jobs:
     permissions: write-all
     uses: fanpay/git_actions/.github/workflows/release.yml@main
     with:
-      release_version: ${{ needs.generate_version.outputs.release_version }}
+      release_version: release/${{ needs.generate_version.outputs.release_version }}
       release_tag: ${{ needs.generate_version.outputs.release_tag }}
          
