--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,11 +109,10 @@ jobs:
       - name: Checkout de repositorio
         uses: actions/checkout@v3
         with:
-          ref: ${{inputs.release_version}}
+          ref: main
       - name: Creación de tag de versionamiento
         run: |
             git config --global user.email "admin@github.com"
             git config --global user.name "Admin"
             git tag -a ${{inputs.release_tag}} -m 'Se realiza nuevo release ${{inputs.release_tag}}'
-      - name: Asignación de tag a la rama main
-        run: git push origin main
+            git push
